--- a/UniGraphics/Fractals/FractalsView.xaml
+++ b/UniGraphics/Fractals/FractalsView.xaml
@@ -487,58 +487,57 @@
             Grid.Column="0"
             Background="#BCC3FF">
             <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="94*"/>
+                    <ColumnDefinition Width="175*"/>
+                </Grid.ColumnDefinitions>
                 <Label
-                    Grid.Row="1"
                     Grid.Column="0"
                     Width="134"
                     Height="49"
-                    Margin="10,0,10,0"
+                    Margin="68,0,67,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
                     Content="Фрактали"
                     FontSize="25"
-                    Foreground="White" />
+                    Foreground="White" Grid.ColumnSpan="2" />
                 <Label
-                    Grid.Row="1"
                     Grid.Column="0"
                     Width="191"
                     Height="36"
-                    Margin="10,77,10,0"
+                    Margin="39,77,39,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
                     Content="Введіть коефіцієнти:"
                     FontSize="18"
-                    Foreground="White" />
+                    Foreground="White" Grid.ColumnSpan="2" />
                 <Label
-                    Grid.Row="1"
                     Grid.Column="0"
                     Width="26"
                     Height="30"
-                    Margin="6,110,237,0"
+                    Margin="6,110,62,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Content="c:"
                     FontSize="18"
                     Foreground="White" />
                 <Label
-                    Grid.Row="1"
-                    Grid.Column="0"
+                    Grid.Column="1"
                     Width="26"
                     Height="30"
-                    Margin="110,110,133,0"
+                    Margin="16,110,133,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Content="+"
                     FontSize="18"
                     Foreground="White" />
                 <Label
-                    Grid.Row="1"
-                    Grid.Column="0"
+                    Grid.Column="1"
                     Width="26"
                     Height="30"
-                    Margin="219,110,24,0"
+                    Margin="125,110,24,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Content="i"
@@ -546,7 +545,6 @@
                     Foreground="White" />
                 <TextBox
                     Name="ConstantRealText"
-                    Grid.Row="1"
                     Grid.Column="0"
                     Width="73"
                     Height="22"
@@ -560,14 +558,13 @@
                     Foreground="#8787ed"
                     SpellCheck.IsEnabled="True"
                     Text="{Binding Path=ConstantReal, Mode=TwoWay}"
-                    TextWrapping="Wrap" />
+                    TextWrapping="Wrap" Grid.ColumnSpan="2" />
                 <TextBox
                     Name="ConstantImaginaryText"
-                    Grid.Row="1"
-                    Grid.Column="0"
+                    Grid.Column="1"
                     Width="73"
                     Height="22"
-                    Margin="141,118,0,0"
+                    Margin="47,118,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     HorizontalContentAlignment="Center"
@@ -581,7 +578,7 @@
                     Grid.Column="0"
                     Width="26"
                     Height="30"
-                    Margin="5,151,238,0"
+                    Margin="5,151,63,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Content="k:"
@@ -615,8 +612,8 @@
                     VerticalAlignment="Top"
                     BorderThickness="0" />
                 <TextBlock
-                    Grid.Column="0"
-                    Margin="100,158,0,0"
+                    Grid.Column="1"
+                    Margin="6,158,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     FontSize="16"
@@ -636,9 +633,8 @@
                     Minimum="0.1"
                     SmallChange="0.001"
                     Style="{DynamicResource SliderStyle1}"
-                    Value="{Binding Path=FractalScale}" />
+                    Value="{Binding Path=FractalScale}" Grid.ColumnSpan="2" />
                 <Label
-                    Grid.Row="1"
                     Grid.Column="0"
                     Width="88"
                     Height="36"
@@ -648,9 +644,8 @@
                     HorizontalContentAlignment="Center"
                     Content="Масштаб:"
                     FontSize="18"
-                    Foreground="White" />
+                    Foreground="White" Grid.ColumnSpan="2" />
                 <Label
-                    Grid.Row="1"
                     Grid.Column="0"
                     Width="148"
                     Height="36"
@@ -659,9 +654,9 @@
                     VerticalAlignment="Top"
                     Content="Колірна модель:"
                     FontSize="18"
-                    Foreground="White" />
+                    Foreground="White" Grid.ColumnSpan="2" />
                 <Label
-                    Grid.Column="0"
+                    Grid.Column="1"
                     Width="81"
                     Margin="0,214,10,327"
                     HorizontalAlignment="Right"
@@ -670,8 +665,7 @@
                     FontSize="18"
                     Foreground="White" />
                 <ComboBox
-                    Grid.Row="1"
-                    Grid.Column="0"
+                    Grid.Column="1"
                     Width="101"
                     Height="22"
                     Margin="0,253,10,0"
@@ -687,18 +681,16 @@
                 </ComboBox>
                 <Button
                     Name="VisualizeButton"
-                    Grid.Row="1"
                     Width="249"
                     Height="40"
-                    Margin="0,290,0,0"
+                    Margin="10,290,10,0"
                     VerticalAlignment="Top"
                     BorderThickness="0"
                     Command="{Binding Visualize}"
                     Content="Візуалізувати"
                     Foreground="White"
-                    Style="{StaticResource BlueButtonStyle}" />
+                    Style="{StaticResource BlueButtonStyle}" Grid.ColumnSpan="2" />
                 <Label
-                    Grid.Row="1"
                     Grid.Column="0"
                     Width="191"
                     Height="36"
@@ -709,9 +701,8 @@
                     Content="Фрактал малюється..."
                     FontSize="18"
                     Foreground="White"
-                    Visibility="{Binding Path=ProgressVisibility}" />
+                    Visibility="{Binding Path=ProgressVisibility}" Grid.ColumnSpan="2" />
                 <ProgressBar
-                    Grid.Row="1"
                     Width="249"
                     Height="25"
                     Margin="11,363,9,0"
@@ -720,7 +711,7 @@
                     Foreground="#FF1A35B3"
                     Maximum="1"
                     Visibility="{Binding Path=ProgressVisibility}"
-                    Value="{Binding Path=GeneratingProgress}" />
+                    Value="{Binding Path=GeneratingProgress}" Grid.ColumnSpan="2" />
             </Grid>
         </Border>
         <Image
