--- a/UniGraphics/HelpWindow.xaml
+++ b/UniGraphics/HelpWindow.xaml
@@ -8,10 +8,82 @@
         Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
         Title="Довідка" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="224" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
         <Frame
             NavigationUIVisibility="Hidden"
             Source="Help/FractalsHelp.xaml"
             Name="HelpFrame" 
-            Margin="169,82,69,63"/>
+            Margin="10" Grid.Column="1"/>
+
+        <Border
+            Grid.Column="0"
+            Background="#BCC3FF">
+            <Label
+                Width="134"
+                Height="37"
+                Margin="42,0,48,0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top"
+                HorizontalContentAlignment="Center"
+                Content="Зміст"
+                FontSize="22"
+                Foreground="White" />
+        </Border>
+        <Label 
+            Content="Фрактали" 
+            HorizontalAlignment="Left" 
+            Margin="10,36,0,0" 
+            VerticalAlignment="Top"
+            Grid.Column="0"
+            Foreground="White"
+            FontSize="18" 
+            Width="118" 
+            Height="32"/>
+        <Label 
+            Content="Колірні моделі" 
+            HorizontalAlignment="Left" 
+            Margin="10,68,0,0" 
+            VerticalAlignment="Top"
+            Grid.Column="0"
+            Foreground="White"
+            FontSize="18" Width="145" Height="31"/>
+        <Label 
+            Content="Афінні перетворення" 
+            HorizontalAlignment="Left" 
+            Margin="10,99,0,0" 
+            VerticalAlignment="Top"
+            Grid.Column="0"
+            Foreground="White"
+            FontSize="18" Width="203" Height="37"/>
+        <Image
+            Width="82"
+            Grid.Column="0"
+            Height="84"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            Source="/UniGraphics;component/Resources/Unicorn/UnicornCloud.png" 
+            Margin="137,0,5,0" />
+        <Border
+            Grid.Column="0"
+            Width="122"
+            Height="68"
+            Margin="10,0,0,10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Background="White"
+            CornerRadius="15">
+            <TextBlock
+                Padding="5"
+                FontSize="9"
+                Foreground="#4278cf"
+                Text="Привіт! Це довідка. Тут ви можете знайти все про користування даною програмою. Оберіть тему у лівому куті і читайте! :)"
+                TextAlignment="Center"
+                TextWrapping="Wrap" />
+        </Border>
+
+
     </Grid>
 </Window>
