--- a/UniGraphics/Help/ColorModelsHelp.xaml
+++ b/UniGraphics/Help/ColorModelsHelp.xaml
@@ -6,10 +6,60 @@
       xmlns:local="clr-namespace:UniGraphics.Help"
       mc:Ignorable="d" 
       Background="White"
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="500"
       Title="ColorModelsHelp">
 
     <Grid>
-        <Label Content="КОЛЬОРИ ДОПОМОГА!"></Label>
+        <ScrollViewer>
+            <StackPanel Margin="10,0,10,0">
+                <Label 
+                FontStyle ="Italic" 
+                Foreground="#99A2F1" 
+                FontWeight="Bold"
+                Content="Колірні моделі RGB та HSV" 
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Top"
+                FontSize="18"
+                Width="260" 
+                RenderTransformOrigin="0.5,0.516"/>
+                <TextBlock
+                    Foreground="Black"
+                    FontSize="16"
+                    TextWrapping="Wrap"
+                    TextAlignment="Justify">
+                        <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Вхідні дані"/><LineBreak/>
+                        <Run Text="В даному розділі ви можете здійснювати перехід між двома колірними моделями: RGB та HSV."/>
+                        <Run Text="Перш за все, вам потрібно відкрити зображення з яким ви бажаєте працювати. Для цього натисніть"/>
+                        <Run Text="'Файл->Відкрити' та оберіть зображення. Ви побачите його у правому куті у відділі RGB. Тепер ви можете починати роботу!"/>
+                </TextBlock>
+                <TextBlock
+                    Foreground="Black"
+                    FontSize="16"
+                    TextWrapping="Wrap"
+                    TextAlignment="Justify">
+                        <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Робота з зображенням"/><LineBreak/>
+                        <Run Text="Відкрите зображення відразу відображене у RGB та HSV колірних моделях. Як можна спостерігати"/>
+                        <Run Text="в деяких випадках зображення при переході до HSV може бути дещо спотворене та гірше за якістю, через відмінність"/>
+                        <Run Text="у колірному діапазоні між двома моделями. Щоб побачити параметри кольорів у даних моделях - наведіть курсор на зображення."/>
+                        <Run Text="При зміні положення курсору у лівому куті змінюються параметри кольору для RGB та HSL."/><LineBreak/>
+                        <Run Text="Щоб коригувати яскравість для певного тону - оберіть тон у верхньому куті панелі управління та потягніть повзунок"/>
+                        <Run Text="яскравості від -100% до +100%. Тоді ви можете спостерігати зміни у зображенні в моделі HSV."/><LineBreak/>
+                        <Run Text="Для збереження зображення натисніть 'Файл->Зберегти як'. Модливе збереження у форматах .jpeg, .jpg, .png, .tiff, .bmp  .wmf"/>
+                </TextBlock>
+                <TextBlock
+                        Foreground="Black"
+                        FontSize="16"
+                        TextWrapping="Wrap"
+                        TextAlignment="Justify" Height="252">
+                        <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Проблемні ситуації"/><LineBreak/>
+                        <Run Text="При роботі можливі деякі розбіжності з розміром зображення, оскільки розмір поля для них"/>
+                        <Run Text="і розмір самого зображення можуть не співпадати. Так зображення може бути не відображене повністю,"/>
+                        <Run Text="оскільки виходить за межі поля. Для цього скоригуйте розмір вікна, наприклад потягніть вправо, щоб розширити межі."/><LineBreak/>
+                        <Run Text="Крім того, для великих за розміром зображень можлива певна затримка при переході до HSV."/>
+                        <Run Text="Тому для уникнення неповного відображення відкритих файлів, бажано, щоб розмір зображення був невеликим, в наступних межах:"/>
+                        <Run Text="(200-500)x(200-700). Ідеальний розмір - 350x600."/>
+                </TextBlock>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Page>
