--- a/UniGraphics/MainPage.xaml
+++ b/UniGraphics/MainPage.xaml
@@ -5,10 +5,171 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UniGraphics"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="640" d:DesignWidth="917"
       Title="MainPage">
-
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="269*"/>
+            <ColumnDefinition Width="680*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25" />
+            <RowDefinition Height="455" />
+            <RowDefinition MinHeight="120" />
+        </Grid.RowDefinitions>
+        <Menu
+            Grid.ColumnSpan="2"
+            Background="#99A2F1"
+            Foreground="White">
+            <MenuItem
+                FontSize="16"
+                Foreground="White"
+                Header="Файл">
+                <MenuItem
+                    Padding="-20,0,0,0"
+                    Background="#F2F2F2"
+                    Foreground="#99A2F1"
+                    Command="{Binding OpenFile}"
+                    Header="Відкрити" />
+                <MenuItem
+                    Padding="-20,0,0,0"
+                    Background="#F2F2F2"
+                    Foreground="#99A2F1"
+                    Command="{Binding SaveFile}"
+                    Header="Зберегти як..." />
+                <MenuItem
+                    Padding="-20,0,0,0"
+                    Background="#F2F2F2"
+                    Foreground="#99A2F1"
+                    Command="{Binding PerformExit}"
+                    Header="Вийти" />
+            </MenuItem>
+            <MenuItem
+                FontSize="16"
+                Foreground="White"
+                Header="Довідка">
+                <MenuItem
+                    Padding="-20,0,0,0"
+                    Background="#F2F2F2"
+                    Foreground="#99A2F1"
+                    Header="Довідка" />
+                <MenuItem
+                    Padding="-20,0,0,0"
+                    Background="#F2F2F2"
+                    Foreground="#99A2F1"
+                    Header="Навчальні матеріали" />
+                <MenuItem
+                    Padding="-20,0,0,0"
+                    Background="#F2F2F2"
+                    Foreground="#99A2F1"
+                    Header="Про програму"/>
+            </MenuItem>
+        </Menu>
+        <Border
+            Grid.Row="1"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Background="White">
+        </Border>
+        <Border
+            Grid.Row="1"
+            Grid.RowSpan="2"
+            Grid.Column="0"
+            Background="#BCC3FF">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="149*"/>
+                    <ColumnDefinition Width="111*"/>
+                </Grid.ColumnDefinitions>
+                <Label
+                    Grid.Column="0"
+                    Width="186"
+                    Height="49"
+                    Margin="35,5,39,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    HorizontalContentAlignment="Center"
+                    Content="Головне меню"
+                    FontSize="25"
+                    Foreground="White" Grid.ColumnSpan="2" />
+                <Button
+                    Name="ColorModelsButton"
+                    Height="40"
+                    Margin="10,54,10,0"
+                    VerticalAlignment="Top"
+                    BorderThickness="0"
+                    Background="#99A2F1"
+                    Grid.Column="0" Grid.ColumnSpan="2" >
+                    <StackPanel Orientation="Horizontal">
+                        <Image HorizontalAlignment="Left" Source="/UniGraphics;component/Resources/Unicorn/logo.png" Stretch="Uniform" Height="28" Width="60"></Image>
+                        <TextBlock  
+                            FontSize="18"
+                            Text="Колірні моделі"
+                            Foreground="White" Width="154"
+                            ></TextBlock>
+                    </StackPanel>
+                </Button>
+                <Button
+                    x:Name="FractalsButton"
+                    Height="40"
+                    Margin="10,113,10,0"
+                    VerticalAlignment="Top"
+                    BorderThickness="0"
+                    Background="#99A2F1"
+                    Grid.Column="0" Grid.ColumnSpan="2" >
+                    <StackPanel Orientation="Horizontal">
+                        <Image HorizontalAlignment="Left" Source="Resources/Unicorn/logo.png" Stretch="Uniform" Height="28" Width="57"/>
+                        <TextBlock  
+                            FontSize="18"
+                            Text="Фрактали"
+                            HorizontalAlignment="Center"
+                            Foreground="White" Width="158"
+                            />
+                    </StackPanel>
+                </Button>
+                <Button
+                    x:Name="AnimationButton"
+                    Height="40"
+                    Margin="10,170,10,0"
+                    VerticalAlignment="Top"
+                    BorderThickness="0"
+                    Background="#99A2F1"
+                    Grid.Column="0" Grid.ColumnSpan="2" >
+                    <StackPanel Orientation="Horizontal">
+                        <Image HorizontalAlignment="Left" Source="Resources/Unicorn/logo.png" Stretch="Uniform" Height="28" Width="35"/>
+                        <TextBlock  
+                            FontSize="18"
+                            Text="Афінні перетворення"
+                            Foreground="White" Width="180"
+                            />
+                    </StackPanel>
+                </Button>
+
+            </Grid>
+        </Border>
+        <Image
+            Grid.Row="2"
+            Width="118"
+            Height="114"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Source="/UniGraphics;component/Resources/Unicorn/UnicornHat.png" Grid.ColumnSpan="2" Margin="0,0,651,10" />
+        <Border
+            Grid.Row="2"
+            Grid.Column="0"
+            Width="150"
+            Height="86"
+            Margin="10,0,0,16"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Background="White"
+            CornerRadius="15">
+            <TextBlock
+                Padding="5"
+                Foreground="#4278cf"
+                FontSize="14"
+                TextAlignment="Center"
+                TextWrapping="Wrap" ><Run Text="Вивчайте основи комп'ютерної графіки разом з UniGraphics! :)"/></TextBlock>
+        </Border>
     </Grid>
 </Page>
