--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -79,7 +79,7 @@
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
                     Foreground="#99A2F1"
-                    Header="Навчальні матеріали" />
+                    Header="Навчальні матеріали" Click="StudyMaterialsClicked" />
                 <MenuItem
                     Padding="-20,0,0,0"
                     Background="#F2F2F2"
