All help is ready. Made study materials. Add button back and button convert on color models, as teacher likes

--- a/UniGraphics/Help/ColorModelsHelp.xaml
+++ b/UniGraphics/Help/ColorModelsHelp.xaml
@@ -30,7 +30,7 @@
                         <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Вхідні дані"/><LineBreak/>
                         <Run Text="В даному розділі ви можете здійснювати перехід між двома колірними моделями: RGB та HSL."/>
                         <Run Text="Перш за все, вам потрібно відкрити зображення з яким ви бажаєте працювати. Для цього натисніть"/>
-                        <Run Text="'Файл->Відкрити' та оберіть зображення. Ви побачите його у правому куті у відділі RGB. Тепер ви можете починати роботу!"/>
+                        <Run Text="'Файл->Відкрити' та оберіть зображення. Ви побачите його у відділі RGB. Тепер ви можете починати роботу!"/>
                 </TextBlock>
                 <TextBlock
                     Foreground="Black"
@@ -38,7 +38,7 @@
                     TextWrapping="Wrap"
                     TextAlignment="Justify">
                         <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Робота з зображенням"/><LineBreak/>
-                        <Run Text="Відкрите зображення відразу відображене у RGB та HSL колірних моделях. Як можна спостерігати"/>
+                        <Run Text="Відкрите зображення відображене у RGB. Щоб конвертувати його у HSL натисніть кнопку 'Конвертувати'. Як можна спостерігати"/>
                         <Run Text="в деяких випадках зображення при переході до HSL може бути дещо спотворене та гірше за якістю, через відмінність"/>
                         <Run Text="у колірному діапазоні між двома моделями. Щоб побачити параметри кольорів у даних моделях - наведіть курсор на зображення."/>
                         <Run Text="При зміні положення курсору у лівому куті змінюються параметри кольору для RGB та HSL."/><LineBreak/>
