--- a/UniGraphics/ColorModels/ColorModelsView.xaml
+++ b/UniGraphics/ColorModels/ColorModelsView.xaml
@@ -96,14 +96,14 @@
             Background="#BCC3FF">
             <Grid>
                 <Button
-                    Name="BackButton"
+                    Name="BackButton" 
                     Height="29"
                     Margin="10,19,229,0"
                     VerticalAlignment="Top"
                     BorderThickness="0"
                     Background="#99A2F1"
                     Grid.Column="0" >
-                    <Image HorizontalAlignment="Left" Source="/UniGraphics;component/Resources/Unicorn/logo.png" Stretch="Uniform" Height="28" Width="25"/>
+                    <Image HorizontalAlignment="Left" Source="/UniGraphics;component/Resources/back.png" Stretch="Uniform" Height="28" Width="25"/>
                 </Button>
                 <Label
                     Grid.Column="0"
@@ -185,6 +185,18 @@
                     Content="-100%"
                     FontSize="16"
                     Foreground="White" />
+                <Button
+                    Name="Convert" 
+                    FontSize="18"
+                    Foreground="White"
+                    Content="Конвертувати"
+                    Height="38"
+                    Margin="10,278,10,0"
+                    VerticalAlignment="Top"
+                    BorderThickness="0"
+                    Background="#99A2F1"
+                    Grid.Column="0" >
+                </Button>
             </Grid>
         </Border>
         <Border Background="#BCC3FF" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"></Border>
@@ -244,10 +256,10 @@
             <TextBlock
                 Padding="5"
                 Foreground="#4278cf"
-                FontSize="14"
-                Text="Щоб почати роботу з колірними моделями RGB та HSL натисніть Файл->Відкрити :)"
+                FontSize="10"
+                Text="Щоб почати роботу з колірними моделями RGB та HSL, оберіть зображення у 'Файл' та натисніть кнопку 'Конвертувати' :)"
                 TextAlignment="Center"
-                TextWrapping="Wrap" />
+                TextWrapping="Wrap" Margin="0,4,0,0" />
         </Border>
         <Rectangle 
             Fill="{StaticResource HueBrush}" 
