--- a/UniGraphics/Help/ColorModelsHelp.xaml
+++ b/UniGraphics/Help/ColorModelsHelp.xaml
@@ -30,7 +30,7 @@
                         <Run FontStyle ="Italic" Foreground="#99A2F1" FontWeight="Bold" Text="Вхідні дані"/><LineBreak/>
                         <Run Text="В даному розділі ви можете здійснювати перехід між двома колірними моделями: RGB та HSL."/>
                         <Run Text="Перш за все, вам потрібно відкрити зображення з яким ви бажаєте працювати. Для цього натисніть"/>
-                        <Run Text="'Файл->Відкрити' та оберіть зображення. Ви побачите його у відділі RGB. Тепер ви можете починати роботу!"/>
+                        <Run Text="'Файл->Відкрити' та оберіть зображення. Ви побачите його у відділі RGB. Тепер ви можете починати роботу!"/><LineBreak/>
                 </TextBlock>
                 <TextBlock
                     Foreground="Black"
@@ -44,7 +44,7 @@
                         <Run Text="При зміні положення курсору у лівому куті змінюються параметри кольору для RGB та HSL."/><LineBreak/>
                         <Run Text="Щоб коригувати яскравість для певного тону - оберіть тон у верхньому куті панелі управління та потягніть повзунок"/>
                         <Run Text="яскравості від -100% до +100%. Тоді ви можете спостерігати зміни у зображенні в моделі HSL."/><LineBreak/>
-                        <Run Text="Для збереження зображення натисніть 'Файл->Зберегти як'. Модливе збереження у форматах .jpeg, .jpg, .png, .tiff, .bmp  .wmf"/>
+                        <Run Text="Для збереження зображення натисніть 'Файл->Зберегти як'. Можливе збереження у форматах .jpeg, .jpg, .png, .tiff, .bmp  .wmf"/> <LineBreak/>
                 </TextBlock>
                 <TextBlock
                         Foreground="Black"
