--- a/UniGraphics/HelpWindow.xaml
+++ b/UniGraphics/HelpWindow.xaml
@@ -41,7 +41,7 @@
             Foreground="White"
             FontSize="18" 
             Width="118" 
-            Height="32"/>
+            Height="32" MouseLeftButtonUp="FractalHelpClicked"/>
         <Label 
             Content="Колірні моделі" 
             HorizontalAlignment="Left" 
@@ -49,7 +49,7 @@
             VerticalAlignment="Top"
             Grid.Column="0"
             Foreground="White"
-            FontSize="18" Width="145" Height="31"/>
+            FontSize="18" Width="145" Height="31" MouseLeftButtonUp="ColorModelHelpClicked"/>
         <Label 
             Content="Афінні перетворення" 
             HorizontalAlignment="Left" 
