--- a/UniGraphics/StudyWindow.xaml
+++ b/UniGraphics/StudyWindow.xaml
@@ -15,7 +15,7 @@
         <Frame
             NavigationUIVisibility="Hidden"
             Source="StudyMaterials/ColorModelsStudy.xaml"
-            Name="HelpFrame" 
+            Name="StudyFrame" 
             Margin="10" Grid.Column="1"/>
 
         <Border
@@ -41,7 +41,7 @@
             Foreground="White"
             FontSize="18" 
             Width="118" 
-            Height="32"/>
+            Height="32" MouseLeftButtonUp="FractalStudyClicked"/>
         <Label 
             Content="Колірні моделі" 
             HorizontalAlignment="Left" 
@@ -49,7 +49,7 @@
             VerticalAlignment="Top"
             Grid.Column="0"
             Foreground="White"
-            FontSize="18" Width="145" Height="31"/>
+            FontSize="18" Width="145" Height="31" MouseLeftButtonUp="ColorModelsStudyClicked"/>
         <Label 
             Content="Афінні перетворення" 
             HorizontalAlignment="Left" 
