--- a/UniGraphics/StudyMaterials/FractalsStudy.xaml
+++ b/UniGraphics/StudyMaterials/FractalsStudy.xaml
@@ -115,8 +115,19 @@
                     FontSize="16"
                     TextWrapping="Wrap"
                     TextAlignment="Justify"
-                    Margin="10,0,0,10" Height="70">
-                <Run Text="Більш детально ознайомитись з фракталами Ньютона ви можете за посиланням: http://zonakoda.ru/padenie-v-bassejny-nyutona.html"></Run>
+                    Margin="10,0,0,10" Height="50">
+                <Run Text="Більш детально ознайомитись з фракталами Ньютона ви можете за посиланням:"></Run>
+                </TextBlock>
+                <TextBlock
+                    Foreground="Black"
+                    FontStyle="Italic"
+                    FontSize="16"
+                    TextWrapping="Wrap"
+                    TextAlignment="Justify"
+                    Margin="10,0,0,10" Height="61">
+                    <Hyperlink NavigateUri="http://zonakoda.ru/padenie-v-bassejny-nyutona.html">
+                        <Run Text="http://zonakoda.ru/padenie-v-bassejny-nyutona.html"/>
+                    </Hyperlink>
                 </TextBlock>
                 <!--hnkdmcxbfjk-->
             </StackPanel>
