--- a/UniGraphics/CreditsWindow.xaml
+++ b/UniGraphics/CreditsWindow.xaml
@@ -6,48 +6,47 @@
         xmlns:local="clr-namespace:UniGraphics"
         mc:Ignorable="d"
         Icon="/UniGraphics;component/Resources/Unicorn/logo.png"
-        Title="CreditsWindow" Height="510" Width="610">
+        Title="CreditsWindow" Height="550" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="233" />
-            <RowDefinition Height="283" />
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Image
             Grid.Row="0"
             Width="193"
             Height="204"
-            Margin="198,0,211,19"
+            Margin="0,0,0,19"
             HorizontalAlignment="Center"
             VerticalAlignment="Bottom"
             Source="/UniGraphics;component/Resources/Unicorn/logo.png" />
-        <TextBlock
-            Grid.Row="1"
-            Foreground="Black" 
-            FontSize="16"
-            TextWrapping="Wrap"
-            TextAlignment="Justify" 
-            Margin="10,0,10,124">
-            <Run Text="     Дане програмне забезпечення створене як основний проект з дисципліни 'Комп'ютерна графіка'"/>
-            <Run Text="студентами університету 'Львівська політехніка' під керівництвом доцента кафедри програмного забезпечення Левус Є. В. "/><LineBreak/>
-            <Run Text="     Основна мета UniGraphics - допомогти учням старших класів вивчити основи комп'ютерної графіки"/>
-            <Run Text="з розділів 'Фрактали', 'Колірні моделі' та 'Афінні перетворення' у зручній та доступній для школярів формі. "/><LineBreak/>
-        </TextBlock>
-
-        <TextBlock
-            Grid.Row="1"
-            Foreground="Black" 
-            FontSize="16"
-            TextWrapping="Wrap"
-            TextAlignment="Justify" 
-            Margin="10,159,20,77">
-            <Run Text="Власники:   Білас Юрій"/><LineBreak/>
-            <Run Text="                    Герцій Анна"/><LineBreak/>
-        </TextBlock>
-        <Label 
-            Grid.Row="1"
-            FontSize="16"
-            HorizontalAlignment="Center" Margin="241,201,206,47" Width="145">
-            Версія: 1.0, 2019
-        </Label>
+        <ScrollViewer Grid.Row="1">
+            <StackPanel  Margin="10, 10, 10, 10" >
+                <TextBlock
+                Foreground="Black" 
+                FontSize="16"
+                TextWrapping="Wrap"
+                TextAlignment="Justify" >
+                <Run Text="     Дане програмне забезпечення створене як основний проект з дисципліни 'Комп'ютерна графіка'"/>
+                <Run Text="студентами університету 'Львівська політехніка' під керівництвом доцента кафедри програмного забезпечення Левус Є. В. "/><LineBreak/>
+                <Run Text="     Основна мета UniGraphics - допомогти учням старших класів вивчити основи комп'ютерної графіки"/>
+                <Run Text="з розділів 'Фрактали', 'Колірні моделі' та 'Афінні перетворення' у зручній та доступній для школярів формі. "/><LineBreak/>
+                </TextBlock>
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    Foreground="Black" 
+                    FontSize="16"
+                    TextWrapping="Wrap"
+                    TextAlignment="Justify">
+                    <Run Text="Розробники:   Білас Юрій"/><LineBreak/>
+                    <Run Text="                        Герцій Анна"/><LineBreak/>
+                </TextBlock>
+                <Label 
+                    HorizontalContentAlignment="Center"
+                    FontSize="16">
+                    Версія: 1.0, 2019
+                </Label>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Window>
